[package]
name = "monaco-editor-textmate-web"
version = "0.1.0"
description = "A helper to register TextMate grammars with the Monaco Code Editor in Rust"
edition = "2021"
license = "MIT"

authors = ["Jens Reimann <jreimann@redhat.com>"]
repository = "https://github.com/ctron/monaco-editor-textmate-web"
readme = "README.md"

categories = ["external-ffi-bindings", "text-processing", "wasm", "web-programming"]
keywords = ["monaco", "editor", "wasm", "yew"]

[dependencies]
js-sys = "0.3.61"
#monaco = "0.3.0"
monaco = { version = "0.3.0", git = "https://github.com/siku2/rust-monaco" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20", optional = true }

#[patch.crates-io]
#monaco = { git = "https://github.com/siku2/rust-monaco" }

[features]
yew = [ "dep:yew", "monaco/yew-components" ]
